# operational-waste-recovery

./: .gitignore  Makefile  PROOF_OUTPUT.md  README.md  docker-compose.yml  operational-waste-recovery.yaml  pyproject.toml  requirements.txt
configs/: incident_ontology.yaml  waste-taxonomy.yaml
data/: format.jsonl  high_quality_events.jsonl  sample_events.jsonl
docs/: ARCHITECTURE.md  DATA_CONTRACTS.md  LOCAL_RUNBOOK.md  PRINCIPLES.md  The-Right-Kinda-Data.md  VALIDATION.md  file_tree.txt
docs/tools/: README.md  openai_integration.md  tool_integration_matrix.md
examples/: example_events.jsonl
reports/: .gitkeep
scripts/: CREATE_RETRIEVAL_PHASE1.ps1  create_tree.ps1  env_enforcer.sh  reset_local_state.sh  root_maker.ps1  smoke_test.ps1  smoke_test.sh
sprints/: README.md
sprints/00_resource_accounting/: README.md  README.yaml
sprints/01_observation_layer/: README.md
sprints/02_deduplication_engine/: README.md
sprints/03_context_reconstruction/: README.md
sprints/04_recovery_layer/: README.md
sprints/05_incident_reasoning_graph/: README.md
sprints/06_retrieval_cli_proof/: README.md
sprints/07_distribution_reports/: README.md
sprints/08_external_tool_gates/: README.md
src/owrp/: cli.py
src/owrp/core/: __init__.py  config.py  hashing.py  logging.py  models.py  paths.py  resource_accounting.py  types.py
src/owrp/execution_context/: capsules.py
src/owrp/pipeline/: deduplicate.py  ingest.py  reports.py  validate.py
src/owrp/storage/: duplicate_store.py  schema.sql  (+1 more)
tests/: test_cli_smoke.py  test_ingest.py  test_spr1.sh  tests.md
