[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "owrp"
version = "0.1.0"
description = "Local-first operational waste recovery telemetry system"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0.2"
]

[project.scripts]
owrp = "owrp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]